# Framework

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  compile_flags.txt  makefile  readme.md  readme.txt
.github/workflows/: main.yml
libs/: build.py  build_fwcore.py  build_glfw.py  build_slang.sh  build_tracy.py  ffmpeg.sh  libvulkan.so.1  libvulkan.so.1.4.349
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/ai/: controller.h
src/ai/fuzzyLogic/: fuzzyController.cpp  fuzzyController.h  fuzzyMembership.h  fuzzyRule.h  fuzzySet.h  main.cpp
src/application/: application.h  confply.cpp.py  update.cpp  update.h
src/application/bitmap_sample/: .gitignore  bitmap_sample.cpp  bitmap_sample.h  build.py
src/application/log_sample/: build.py  log_sample.cpp  log_sample.h
src/application/module_sample/: build.py  linked_list.cpp  linked_list.cppm  module_sample.cpp  module_sample.h
src/application/mpeg_sample/: .gitignore  RCLib.js  build.cpp.py  build.py  build_test.py  build_wasm.cpp.py  functions.cpp  index.html  mpeg_decoder.cpp  mpeg_decoder.h  mpeg_reader.cpp  mpeg_reader.h  mpeg_sample.cpp  mpeg_sample.h  mpeg_writer.cpp  mpeg_writer.h  rcstyle.css
src/application/mpeg_sample/stream/: stream.html
src/application/mpeg_sample/terminal/: license  slideover.html  terminal.css  terminal.js
src/application/net_physics_sample/: CMakeLists.txt  build.py  net_physics_sample.cpp  net_physics_sample.h
src/application/new_sample/: build.py  new_sample.cpp  new_sample.h
src/application/param_sample/: build.py  param_sample.cpp  param_sample.h
src/application/rc_sample/: CMakeLists.txt  RCLib.js  bmp_image.h  build.py  index.html  movie.html  nipple.html  nipple.js  rc_sample.cpp  rc_sample.h  rcstyle.css
src/application/rc_sample/movie/: movie.html  run.py
src/application/rc_sample/nipple/: nipple.html
src/application/rc_sample/stream/: stream.css  stream.html
src/application/rc_sample/terminal/: terminal.css  terminal.html  terminal.js
src/application/scratch_sample/: build.py  scratch_sample.cpp  scratch_sample.h
src/application/vulkan_sample/: build.py  tiny_gltf_loader.cpp  tiny_gltf_loader.h  vulkan_sample.cpp  vulkan_sample.h
src/application/vulkan_sample/shaders/: fullscreen.vert.glsl  imgui.frag.glsl  imgui.vert.glsl  pbr.frag.glsl  shared.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  unlit.frag.glsl  uv_triangle.frag.glsl
src/application/vulkan_sample/slang/: pbr_sl.frag.slang  shared_sl.vert.slang
src/documentation/: design.txt
src/entities/: entity.h
src/entities/car/: car.h
src/entities/car/coasterRider/: coasterRider.h
src/entities/coasterRider/: coasterRider.cpp
src/entities/controllers/: iController.h
src/entities/controllers/AI/: zombieAI.h
src/entities/networked/: netEntity.cpp  netEntity.h
src/game/: game.cpp  game.h
src/graphics/: graphics.h  graphics2.h  iRenderVisitor.h
src/graphics/bitmap/: bitmap.cpp  bitmap.h
src/graphics/camera/: camera.cpp  camera.h
src/graphics/gGlfwVulkan/: fullscreen_pipeline.cpp  fullscreen_pipeline.h  gGlfwVulkan.cpp  gGlfwVulkan.h  pbr_pipeline.cpp  pbr_pipeline.h  pipeline_shared.h  vulkan_types.h
src/graphics/gSdl/: gSdl.cpp  gSdl.h
src/graphics/gSdlGl/: gSdlGl.cpp  gSdlGl.h
src/graphics/gSdlGl/renderers/: cameraRenderer.cpp  modelRenderer.cpp  polyRenderer.cpp  spriteRenderer.cpp
src/graphics/gWinGl/: gWinGl.cpp  gWinGl.h
src/graphics/gWinGl/renderers/: polyRenderer.cpp  spriteRenderer.cpp
src/graphics/gWinGl4/: gWinGl4.cpp  gWinGl4.h
src/graphics/gWinGl4/renderers/: cameraRenderer.cpp  spriteRenderer.cpp
src/graphics/gWinGl4/shader/: shader.cpp  shader.h
src/graphics/gWinGl4/shader/GLSL/: simple.fs
src/graphics/renderable/: iRenderable.h
src/graphics/renderable/3DObject/: object3D.h  skybox.h  sphere.h
src/graphics/renderable/sprite/: sprite.h
src/graphics/renderable/sprite/animSprite/: animSprite.h
src/graphics/resources/: bitmap.cpp  bitmap.h
src/graphics/resources/model/: model.cpp  model.h
src/graphics/shader/: shader.cpp  shader.h
src/graphics/shader/GLSL/: simple.gs  simple.vs
src/graphics/skin/: skin.h
src/graphics/skin/animSkin/: animSkin.h
src/input/: input.h  input2.h
src/input/inGlfw/: inGlfw.cpp  inGlfw.h
src/input/inSdl/: inSdl.cpp  inSdl.h
src/input/inSimple/: inSimple.cpp  inSimple.h
src/input/inWin/: inWin.cpp  inWin.h
src/networking/: net.cpp  net.h
src/networking/connection/: address.cpp  address.h  connection.cpp  connection.h  flowControl.cpp  http_server.cpp  http_server.h  socket.cpp  socket.h  stats.cpp  stats.h
src/networking/packet/: packet.cpp  packet.h  packetqueue.cpp  readPacket.cpp  readPacket.h  writePacket.cpp  writePacket.h
src/networking/utils/: dataUtils.cpp  dataUtils.h  encode.cpp  encode.h  encrypt.cpp  encrypt.h  iNetworked.h  sha.c  subscriber.h
src/physics/: collision.h  collision_manager.cpp  collision_manager.h  physics.h  physicsState.h  physics_state.h  polygon.cpp  polygon.h  rigidBody.cpp  rigidBody.h  rigid_body.cpp  rigid_body.h
src/physics/colliders/: box.cpp  box.h  circle.cpp  circle.h  collider.cpp  collider.h  polygon.cpp  polygon.h
src/types/: Mat3x3f.h  Vec2i.h  Vec3f.h  bezierCurve.cpp  bezierCurve.h  bounds.h  mat3x3f.cpp  mat4x4f.cpp  mat4x4f.h  point3f.cpp  point3f.h  quaternion.cpp  quaternion.h  rect.h  transform.h  vec2f.cpp  vec2f.h  vec2i.cpp  vec2i.h  vec3f.cpp  vec3f.h
src/utils/: blob.cpp  blob.h  commandline.cpp  commandline.h  filesystem.h  hasher.h  import.cpp  import.h  importer.cpp  importer.h  params.cpp  params.h  profiler.h  string_helpers.h  test.cpp  test.h  zip.cpp  zip.h
src/utils/log/: log.cpp  log.h  log_macros.h
src/utils/tmxloader/: TMXLoader.cpp  TMXLoader.h
src/window/: window.h  window2.h
src/window/wGlfwVulkan/: wGlfwVulkan.cpp  wGlfwVulkan.h
src/window/wSdl/: wSdl.cpp  wSdl.h
src/window/wSdlGl/: wSdlGl.cpp  wSdlGl.h
src/window/wWinGl/: wWinGl.cpp  wWinGl.h
src/window/wWinGl4/: wWinGl.cpp  wWinGl4.cpp  wWinGl4.h
tools/: slang
(+2 files in other folders)
